test_programs/compile_failure/noirc_frontend_tests_numeric_generic_binary_operation_type_mismatch/src/main.nr

    pub fn foo<let N: Field>() -> bool {
        let mut check: bool = true;
        check = N;
        check
    }
    